feat: align with Revolut credit card terms and modernize to Java 25
- Support exact purchase date and dynamic 365/366-day daily interest rate
- Support 1-month and 2-month interest-free grace periods
- Automatically adjust early payments up to minimum payment floor
- Pre-bill interest from purchase date into first installment statement
- Modernize codebase with Java 25 toolchain, var, and unnamed catch variables