@@ -3,8 +3,8 @@ package org.example;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
+import java.time.LocalDate;
 import java.time.YearMonth;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -12,40 +12,97 @@ class CreditCalculatorTest {
 
     private final CreditCalculator calculator = new CreditCalculator();
 
+    // --- Interest accrual ---
+
     @Test
-    void dailyInterestAccrual_firstMonth_correctAmount() {
-        // 1000 EUR in Jan 2025, 2-month repayment.
-        // Feb has 28 days. Daily interest = 1000 * 0.14 / 365 per day.
-        // Expected Feb interest = 28 * (1000 * 0.14 / 365) = 10.74 EUR (rounded)
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+    void dailyInterestAccrual_includesPreBillingAndFirstMonthInterest() {
+        // 1000 EUR on Jan 1 2025, 3-month repayment.
+        // Pre-billing: Jan 1-31 = 31 days at 0.14/365.
+        // Opening balance of Feb = 1000 + pre-billing interest = 1011.89.
+        // Feb interest (28 days on 1011.89) = 10.87.
+        // Displayed first-month interest = pre-billing (11.89) + Feb interest (10.87) = 22.76.
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1000.00"),
-                YearMonth.of(2025, 1),
-                2
+                LocalDate.of(2025, 1, 1),
+                3
         );
 
-        assertEquals(2, schedule.size());
-        MonthlyStatement feb = schedule.getFirst();
+        assertEquals(3, schedule.size());
+        var feb = schedule.getFirst();
         assertEquals(YearMonth.of(2025, 2), feb.month());
-        assertEquals(new BigDecimal("1000.00"), feb.openingBalance());
-        assertEquals(new BigDecimal("10.74"), feb.interestCharged());
+        assertEquals(new BigDecimal("1011.89"), feb.openingBalance());
+        assertEquals(new BigDecimal("22.76"), feb.interestCharged());
     }
 
     @Test
-    void paymentAllocation_interestPaidFirst_thenPrincipal() {
-        // 1000 EUR in Jan 2025, 2-month repayment.
-        // Feb interest = 10.74. Equal payment covers interest first, remainder reduces principal.
-        // After Feb payment: closing = opening + interest - payment
-        // Month 2 opening balance must equal month 1 closing balance.
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+    void midMonthPurchase_preBillingInterestReduced() {
+        // 1000 EUR on Jan 15 2025, 3 months.
+        // Pre-billing: Jan 15-31 = 17 days. Less interest than full-month purchase.
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1000.00"),
-                YearMonth.of(2025, 1),
-                2
+                LocalDate.of(2025, 1, 15),
+                3
         );
 
-        MonthlyStatement feb = schedule.get(0);
-        MonthlyStatement mar = schedule.get(1);
+        assertEquals(3, schedule.size());
+        var feb = schedule.getFirst();
+        assertEquals(YearMonth.of(2025, 2), feb.month());
+        assertEquals(new BigDecimal("1006.52"), feb.openingBalance());
+        assertEquals(new BigDecimal("17.33"), feb.interestCharged());
 
-        // Payment must exceed interest to reduce principal
+        // Less interest than Jan 1 purchase (opening 1011.89)
+        assertTrue(feb.openingBalance().compareTo(new BigDecimal("1011.89")) < 0,
+                "Mid-month purchase should have less pre-billing interest");
+    }
+
+    @Test
+    void leapYear_dailyRateUses366Days() {
+        // 1000 EUR on Feb 1 2024 (leap year), 3 months.
+        // Daily rate = 0.14/366. Pre-billing: 29 days in Feb at 0.14/366.
+        // Opening balance = 1011.09 (slightly less than 1011.89 in non-leap year).
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2024, 2, 1),
+                3
+        );
+
+        assertEquals(3, schedule.size());
+        var mar = schedule.getFirst();
+        assertEquals(YearMonth.of(2024, 3), mar.month());
+        assertEquals(new BigDecimal("1011.09"), mar.openingBalance());
+
+        // March 2024 has 31 days, still leap year: rate = 0.14/366
+        assertEquals(new BigDecimal("23.08"), mar.interestCharged());
+    }
+
+    @Test
+    void leapYear_endOfFebruary_minimalPreBillingInterest() {
+        // 1000 EUR on Feb 28 2024 (leap year). Pre-billing: Feb 28-29 = 2 days.
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2024, 2, 28),
+                3
+        );
+
+        var mar = schedule.getFirst();
+        assertEquals(new BigDecimal("1000.77"), mar.openingBalance());
+        // Pre-billing interest = 0.77 EUR (2 days at 0.14/366)
+    }
+
+    // --- Payment allocation ---
+
+    @Test
+    void paymentAllocation_interestPaidFirst_thenPrincipal() {
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2025, 1, 1),
+                3
+        );
+
+        var feb = schedule.get(0);
+        var mar = schedule.get(1);
+
+        // Payment must exceed displayed interest to reduce principal
         assertTrue(feb.paymentAmount().compareTo(feb.interestCharged()) > 0,
                 "Payment must exceed interest charged");
 
@@ -54,65 +111,66 @@ class CreditCalculatorTest {
                 "Month 2 opening must equal month 1 closing");
 
         // Final balance = 0
-        assertEquals(0, mar.closingBalance().compareTo(BigDecimal.ZERO),
+        assertEquals(0, schedule.getLast().closingBalance().compareTo(BigDecimal.ZERO),
                 "Final closing balance must be zero");
     }
 
+    // --- Interest capitalization ---
+
     @Test
     void interestCapitalization_unpaidInterestAddsToPrincipal() {
-        // 1000 EUR in Jan, 6 months. Equal payments are small relative to balance.
-        // After month 1: closing balance = opening + interest - payment
-        // Month 2 interest calculated on closing balance (which includes any capitalized interest)
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1000.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 6
         );
 
-        MonthlyStatement feb = schedule.get(0);
-        MonthlyStatement mar = schedule.get(1);
+        var feb = schedule.get(0);
+        var mar = schedule.get(1);
 
-        // Feb closing = 1000 + 10.74 - payment
-        BigDecimal expectedFebClosing = new BigDecimal("1000.00")
-                .add(feb.interestCharged())
+        // Feb closing = opening + interest_for_feb_only - payment
+        // Note: displayed interest includes pre-billing, but only Feb interest is
+        // added to balance within Feb (pre-billing already in opening balance).
+        // So: closing = opening + (displayed_interest - pre_billing) - payment
+        // = opening + feb_interest_only - payment
+        // But since opening already includes pre-billing interest,
+        // closing = opening + feb_month_interest - payment
+        // feb_month_interest = displayed_interest - pre_billing_interest
+        // pre_billing = opening - 1000.00 = 1011.89 - 1000.00 = 11.89
+        var preBilling = feb.openingBalance().subtract(new BigDecimal("1000.00"));
+        var febMonthInterest = feb.interestCharged().subtract(preBilling);
+        var expectedFebClosing = feb.openingBalance()
+                .add(febMonthInterest)
                 .subtract(feb.paymentAmount());
         assertEquals(0, expectedFebClosing.compareTo(feb.closingBalance()),
-                "Feb closing = opening + interest - payment");
+                "Feb closing = opening + feb_month_interest - payment");
 
-        // Mar opening = Feb closing (which includes capitalized interest portion)
         assertEquals(feb.closingBalance(), mar.openingBalance());
-
-        // Mar interest calculated on higher base (includes unpaid interest from Feb)
-        // If payment < opening + interest, some interest capitalized
-        // Mar daily interest based on Feb closing balance
-        // Mar has 31 days: expected = closingFeb * 0.14 / 365 * 31
-        BigDecimal expectedMarInterest = feb.closingBalance()
-                .multiply(new BigDecimal("0.14"))
-                .multiply(new BigDecimal("31"))
-                .divide(new BigDecimal("365"), 2, java.math.RoundingMode.HALF_UP);
-        assertEquals(expectedMarInterest, mar.interestCharged(),
-                "Mar interest based on Feb closing balance (includes capitalized interest)");
     }
+
+    // --- Minimum payment ---
 
     @Test
     void minimumPayment_fivePercentOrFiveEur_whicheverHigher() {
-        // 5% of 1000 = 50 EUR. 5% of 80 = 4.00, floor = 5.00
         assertEquals(new BigDecimal("50.00"), calculator.calculateMinimumPayment(new BigDecimal("1000.00")));
         assertEquals(new BigDecimal("5.00"), calculator.calculateMinimumPayment(new BigDecimal("80.00")));
         assertEquals(new BigDecimal("5.00"), calculator.calculateMinimumPayment(new BigDecimal("50.00")));
         assertEquals(new BigDecimal("5.25"), calculator.calculateMinimumPayment(new BigDecimal("105.00")));
+        // Balance below floor: minimum capped at balance
+        assertEquals(new BigDecimal("3.00"), calculator.calculateMinimumPayment(new BigDecimal("3.00")));
+        // Zero balance: minimum is zero
+        assertEquals(new BigDecimal("0.00"), calculator.calculateMinimumPayment(BigDecimal.ZERO));
     }
 
     @Test
     void minimumPayment_scheduleNeverBelowMinimum() {
-        // 1000 EUR over 6 months. Each monthly payment must >= minimum payment for that month.
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1000.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 6
         );
 
-        for (MonthlyStatement statement : schedule) {
+        for (var statement : schedule) {
             assertTrue(statement.paymentAmount().compareTo(statement.minimumPayment()) >= 0,
                     "Payment " + statement.paymentAmount() +
                             " must be >= minimum " + statement.minimumPayment() +
@@ -121,42 +179,107 @@ class CreditCalculatorTest {
     }
 
     @Test
-    void tooManyMonths_paymentBelowMinimum_throwsException() {
-        // 100 EUR over 100 months: equal payment ~1 EUR, well below 5 EUR minimum.
-        assertThrows(IllegalArgumentException.class, () ->
-                calculator.calculatePaymentSchedule(
-                        new BigDecimal("100.00"),
-                        YearMonth.of(2025, 1),
-                        100
-                ));
+    void minimumPayment_adjustedWhenEqualPaymentBelowMinimum() {
+        // 1700 EUR / 24 months. Equal payment below minimum for early months.
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1700.00"),
+                LocalDate.of(2025, 1, 1),
+                24
+        );
+
+        assertEquals(24, schedule.size());
+        assertEquals(new BigDecimal("1720.21"), schedule.getFirst().openingBalance());
+
+        for (var statement : schedule) {
+            assertTrue(statement.paymentAmount().compareTo(statement.minimumPayment()) >= 0,
+                    "Payment " + statement.paymentAmount() +
+                            " must be >= minimum " + statement.minimumPayment() +
+                            " in " + statement.month());
+        }
+
+        assertEquals(0, schedule.getLast().closingBalance().compareTo(BigDecimal.ZERO),
+                "Final closing balance must be zero");
+
+        // Consecutive months linked
+        for (var i = 1; i < schedule.size(); i++) {
+            assertEquals(schedule.get(i - 1).closingBalance(), schedule.get(i).openingBalance(),
+                    "Month " + (i + 1) + " opening must equal month " + i + " closing");
+        }
     }
 
     @Test
-    void equalPayments_allMonthsExceptLastHaveSameAmount() {
-        // 1500 EUR in Jan, 6 months. First 5 months should have equal payment.
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+    void minimumPayment_earlyMonthsPayMoreThanEqualPayment() {
+        // 1700 EUR / 24 months: first payment should equal minimum (5% of opening balance).
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1700.00"),
+                LocalDate.of(2025, 1, 1),
+                24
+        );
+
+        var firstStatement = schedule.getFirst();
+        assertEquals(firstStatement.minimumPayment(), firstStatement.paymentAmount(),
+                "First payment should equal minimum payment when equal payment is below minimum");
+    }
+
+    // --- Long repayment / early payoff ---
+
+    @Test
+    void tooManyMonths_balancePaidOffEarly_remainingMonthsZero() {
+        // 100 EUR / 100 months: balance reaches zero well before month 100.
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("100.00"),
+                LocalDate.of(2025, 1, 1),
+                100
+        );
+
+        assertEquals(100, schedule.size());
+
+        for (var statement : schedule) {
+            assertTrue(statement.paymentAmount().compareTo(statement.minimumPayment()) >= 0,
+                    "Payment " + statement.paymentAmount() +
+                            " must be >= minimum " + statement.minimumPayment() +
+                            " in " + statement.month());
+        }
+
+        assertEquals(0, schedule.getLast().closingBalance().compareTo(BigDecimal.ZERO));
+
+        // Balance should reach zero before month 100
+        var lastNonZeroMonth = schedule.stream()
+                .filter(s -> s.openingBalance().compareTo(BigDecimal.ZERO) > 0)
+                .reduce((first, second) -> second);
+        assertTrue(lastNonZeroMonth.isPresent());
+        assertEquals(0, lastNonZeroMonth.get().closingBalance().compareTo(BigDecimal.ZERO),
+                "Balance should reach zero before all months are used");
+    }
+
+    // --- Equal payments ---
+
+    @Test
+    void equalPayments_uniformWhenAboveMinimum() {
+        // 1500 EUR / 6 months. Equal payment high enough to meet minimum.
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1500.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 6
         );
 
         assertEquals(6, schedule.size());
 
-        BigDecimal firstPayment = schedule.getFirst().paymentAmount();
-        for (int i = 0; i < 5; i++) {
+        var firstPayment = schedule.getFirst().paymentAmount();
+        for (var i = 0; i < 5; i++) {
             assertEquals(firstPayment, schedule.get(i).paymentAmount(),
                     "Month " + (i + 1) + " payment should equal first payment");
         }
-        // Last month clears remainder, may differ
     }
+
+    // --- Final balance ---
 
     @Test
     void multiMonthSchedule_finalBalanceZero() {
-        // Various scenarios: balance must reach zero after last payment
-        for (int months : new int[]{2, 3, 6, 12}) {
-            List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        for (var months : new int[]{2, 3, 6, 12, 24}) {
+            var schedule = calculator.calculatePaymentSchedule(
                     new BigDecimal("1500.00"),
-                    YearMonth.of(2025, 1),
+                    LocalDate.of(2025, 1, 1),
                     months
             );
 
@@ -168,61 +291,160 @@ class CreditCalculatorTest {
 
     @Test
     void multiMonthSchedule_consecutiveMonthsLinked() {
-        // Each month's opening balance = previous month's closing balance
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1500.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 6
         );
 
-        for (int i = 1; i < schedule.size(); i++) {
+        for (var i = 1; i < schedule.size(); i++) {
             assertEquals(schedule.get(i - 1).closingBalance(), schedule.get(i).openingBalance(),
                     "Month " + (i + 1) + " opening must equal month " + i + " closing");
         }
     }
 
+    // --- Total interest ---
+
     @Test
     void totalInterest_multiMonth_greaterThanZero() {
-        // Over 6 months, total interest paid must be positive
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1500.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 6
         );
 
-        BigDecimal totalInterest = schedule.stream()
+        var totalInterest = schedule.stream()
                 .map(MonthlyStatement::interestCharged)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         assertTrue(totalInterest.compareTo(BigDecimal.ZERO) > 0, "Total interest must be positive");
 
-        BigDecimal totalPaid = schedule.stream()
+        var totalPaid = schedule.stream()
                 .map(MonthlyStatement::paymentAmount)
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
         // Total paid = spend + total interest
-        BigDecimal expectedTotalPaid = new BigDecimal("1500.00").add(totalInterest);
+        var expectedTotalPaid = new BigDecimal("1500.00").add(totalInterest);
         assertEquals(0, expectedTotalPaid.compareTo(totalPaid),
                 "Total paid must equal spend + total interest");
     }
 
+    // --- Grace period ---
+
     @Test
     void gracePeriod_payFullInOneMonth_zeroInterest() {
-        // Spend 1000 EUR in January, repay in 1 month (by end of February)
-        // Grace period applies: no interest charged
-        List<MonthlyStatement> schedule = calculator.calculatePaymentSchedule(
+        var schedule = calculator.calculatePaymentSchedule(
                 new BigDecimal("1000.00"),
-                YearMonth.of(2025, 1),
+                LocalDate.of(2025, 1, 1),
                 1
         );
 
         assertEquals(1, schedule.size());
 
-        MonthlyStatement feb = schedule.getFirst();
+        var feb = schedule.getFirst();
         assertEquals(YearMonth.of(2025, 2), feb.month());
         assertEquals(new BigDecimal("1000.00"), feb.openingBalance());
         assertEquals(BigDecimal.ZERO.setScale(2), feb.interestCharged());
         assertEquals(new BigDecimal("1000.00"), feb.paymentAmount());
         assertEquals(BigDecimal.ZERO.setScale(2), feb.closingBalance());
+    }
+
+    @Test
+    void gracePeriod_payInTwoMonths_zeroInterest() {
+        // Spend 1600 EUR on Oct 15, repay over 2 months.
+        // Month 1 (Oct): voluntary early payment of half (800 EUR), 0 interest.
+        // Month 2 (Nov): remaining half (800 EUR), 0 interest.
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1600.00"),
+                LocalDate.of(2025, 10, 15),
+                2
+        );
+
+        assertEquals(2, schedule.size());
+
+        var oct = schedule.get(0);
+        assertEquals(YearMonth.of(2025, 10), oct.month());
+        assertEquals(new BigDecimal("1600.00"), oct.openingBalance());
+        assertEquals(BigDecimal.ZERO.setScale(2), oct.interestCharged());
+        assertEquals(new BigDecimal("800.00"), oct.paymentAmount());
+        assertEquals(new BigDecimal("800.00"), oct.closingBalance());
+        assertEquals(new BigDecimal("80.00"), oct.minimumPayment());
+
+        var nov = schedule.get(1);
+        assertEquals(YearMonth.of(2025, 11), nov.month());
+        assertEquals(new BigDecimal("800.00"), nov.openingBalance());
+        assertEquals(BigDecimal.ZERO.setScale(2), nov.interestCharged());
+        assertEquals(new BigDecimal("800.00"), nov.paymentAmount());
+        assertEquals(BigDecimal.ZERO.setScale(2), nov.closingBalance());
+        assertEquals(new BigDecimal("40.00"), nov.minimumPayment());
+    }
+
+    @Test
+    void gracePeriod_twoMonths_enforcesMinimumPaymentFloor() {
+        // Spend 8 EUR on Jan 1, repay over 2 months.
+        // Half would be 4.00, but minimum is 5.00 EUR.
+        // Month 1 payment = 5.00, closing = 3.00.
+        // Month 2 payment = 3.00, closing = 0.00.
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("8.00"),
+                LocalDate.of(2025, 1, 1),
+                2
+        );
+
+        assertEquals(2, schedule.size());
+
+        var jan = schedule.get(0);
+        assertEquals(YearMonth.of(2025, 1), jan.month());
+        assertEquals(new BigDecimal("8.00"), jan.openingBalance());
+        assertEquals(BigDecimal.ZERO.setScale(2), jan.interestCharged());
+        assertEquals(new BigDecimal("5.00"), jan.paymentAmount());
+        assertEquals(new BigDecimal("3.00"), jan.closingBalance());
+
+        var feb = schedule.get(1);
+        assertEquals(YearMonth.of(2025, 2), feb.month());
+        assertEquals(new BigDecimal("3.00"), feb.openingBalance());
+        assertEquals(BigDecimal.ZERO.setScale(2), feb.interestCharged());
+        assertEquals(new BigDecimal("3.00"), feb.paymentAmount());
+        assertEquals(BigDecimal.ZERO.setScale(2), feb.closingBalance());
+    }
+
+    // --- Mid-month purchase ---
+
+    @Test
+    void midMonthPurchase_finalBalanceZero() {
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2025, 1, 15),
+                3
+        );
+
+        assertEquals(0, schedule.getLast().closingBalance().compareTo(BigDecimal.ZERO));
+    }
+
+    @Test
+    void midMonthPurchase_consecutiveMonthsLinked() {
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2025, 1, 15),
+                6
+        );
+
+        for (var i = 1; i < schedule.size(); i++) {
+            assertEquals(schedule.get(i - 1).closingBalance(), schedule.get(i).openingBalance(),
+                    "Month " + (i + 1) + " opening must equal month " + i + " closing");
+        }
+    }
+
+    // --- Leap year ---
+
+    @Test
+    void leapYear_finalBalanceZero() {
+        var schedule = calculator.calculatePaymentSchedule(
+                new BigDecimal("1000.00"),
+                LocalDate.of(2024, 2, 1),
+                6
+        );
+
+        assertEquals(0, schedule.getLast().closingBalance().compareTo(BigDecimal.ZERO));
     }
 }
